# MumbaiHacks-AIJira

./: README.md  package-lock.json
backend/: .env  app.py  requirements.txt  run.py
backend/aijira/: README.md  pyproject.toml
backend/aijira/src/aijira/: crew.py  main.py
backend/mumbaihacks/: .env  README.md  api.py  crew.py  main.py  pyproject.toml  requirements.txt
backend/mumbaihacks/config/: agents.yaml  tasks.yaml
backend/mumbaihacks/src/: app.py
backend/mumbaihacks/src/mumbaihacks/: crew.py  main.py
backend/mumbaihacks/src/mumbaihacks/config/: tasks.yaml
frontend/: package-lock.json  package.json
frontend/components/: Calender.jsx  Kanban.jsx  Nav.jsx  Scheduler.jsx
frontend/config/: firebase.js
frontend/context/: AuthContext.jsx
frontend/pages/: _app.js  _document.js  firebase.js  index.js
frontend/pages/about/: index.js
frontend/styles/: globals.css
