[tool.poetry]
name = "aijira"
version = "0.1.0"
description = "aijira using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.0" }

[tool.poetry.scripts]
aijira = "aijira.main:run"
train = "aijira.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
