[project]
name = "mumbaihacks"
version = "0.1.0"
description = "mumbaihacks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
mumbaihacks = "mumbaihacks.main:run"
run_crew = "mumbaihacks.main:run"
train = "mumbaihacks.main:train"
replay = "mumbaihacks.main:replay"
test = "mumbaihacks.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
